// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pearl/atoms passes the snapshot test for a <Text> component 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    color="success.400"
    fontFamily="body"
    fontWeight="hairline"
    style={{}}
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    asdasd
  </Text>
</View>
`;

exports[`pearl/atoms passes the snapshot test for a <View> component 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    box1={
      {
        "backgroundColor": "success.500",
        "height": 50,
        "width": 50,
      }
    }
    root={
      {
        "backgroundColor": "danger.400",
        "boxShadow": "4xl",
        "height": 200,
        "p": "4xl",
        "width": 200,
      }
    }
    style={
      {
        "backgroundColor": "#FF8371",
        "elevation": 28,
        "height": 200,
        "shadowColor": "#1A2138",
        "shadowOffset": {
          "height": 28,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 28,
        "width": 200,
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  />
</View>
`;

exports[`pearl/basic passes the snapshot test for a <Text> component 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    style={{}}
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    asdasd
  </Text>
</View>
`;

exports[`pearl/basic passes the snapshot test for a <View> component 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={{}}
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  />
</View>
`;

exports[`pearl/molecules passes the snapshot test for a <View> component 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <View
      animate={{}}
      animatedStyle={
        {
          "value": {},
        }
      }
      collapsable={false}
      style={{}}
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    />
    <View
      animate={{}}
      animatedStyle={
        {
          "value": {},
        }
      }
      collapsable={false}
      style={{}}
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    />
  </View>
</View>
`;
